# bill-splitter-api

./: .dockerignore  .env  AGENTS.md  Dockerfile  compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 2026_04_25_1358-85b3be9ce894_initial_migration.py  2026_04_26_2241-b3f19038b583_add_is_admin_column_to_user.py  2026_04_29_1253-0dd1885194b2_each_participant_belongs_to_only_one_.py
cmd/: PublishImage.ps1
src/bill_splitter_api/: __init__.py  dependencies.py  main.py
src/bill_splitter_api/admin/: routes.py
src/bill_splitter_api/auth/: routes.py  schemas.py  security.py
src/bill_splitter_api/bill/: __init__.py  create_bill.py  routes.py  schemas.py
src/bill_splitter_api/core/: __init__.py  project_root_path.py  schemas.py  settings.py
src/bill_splitter_api/db/: __init__.py  database.py
src/bill_splitter_api/models/: __init__.py  base.py  bill.py  user.py
src/bill_splitter_api/user/: __init__.py  routes.py  schemas.py
tests/: conftest.py  test_bill.py
