[project]
name = "bill-splitter-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ezequiel Saidman", email = "ezemati1904@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.136.0",
    "pydantic>=2.13.3",
]

[project.scripts]
bill-splitter-api = "bill_splitter_api:main"

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[tool.fastapi]
entrypoint = "src.bill_splitter_api.main:app"
